2007-12-25  Luca Bruno  <lethalman88@gmail.com>

        Fix issue #25.
        
        * st/kernel/Compiler.st (runMultipleAndDeclarations): copy literal array because the primitive will modify it even it's constant

        * syx/syx-primitives.c (FileStream_fileOp): use fread instead of fgets

2007-12-24  Luca Bruno  <lethalman88@gmail.com>

        Changed FileStream behavior to handle FILE* instead of file descriptors

        * syx/syx-primitives.c (FileStream_fileOp):

        * st/kernel/FileStream.st:

2007-12-24  Rahul <blufox@gmail.com>
        * plugins/x11/plugin-init.c: updated the module prefix to X11

        * plugins/x11/x11gen.rb: updated module prefix to X11 and to remove

        XlibXlib structure

        * plugins/x11/Xlib.i: update with NeedWidePrototypes to compile in solaris

        * plugins/x11/st/XDisplay.st: added instead of XDisplay

        * plugins/x11/st/Xlib.st: updated with new module prefix X11 instead of

        Xlib and remove XlibXlib

        * plugins/x11/st/Display.st: removed

        * plugins/x11/st/XEvent.st: updated by subclassing X11XEvent

        * plugins/x11/SConscript: updated to install Xlib.st

        * plugins/x11/Xlib_wrap.c: updated with new classnames

        * plugins/x11/swig.rb: updated the module prefix.

2007-12-24  Luca Bruno  <lethalman88@gmail.com>

        * st/kernel/Behavior.st: fixed parsing instance and class variable names

        * configure.ac: enable mantainer mode, check for pkg-config and add prereq

        * syx/syx-object.c (syx_dictionary_rehash): missing check

2007-12-23  Luca Bruno  <lethalman88@gmail.com>

        * plugins/x11/st/Wm.st: removed

        * plugins/x11/plugin-init.c: do not include Xlib_wrap.c

        * plugins/x11/Xlib.i:

        * plugins/x11/SConscript: compile Xlib_wrap.c

        * plugins/x11/Makefile.am: compile Xlib_wrap.c

        * configure.ac: enable debug level and fix plugins support
