@@ -1,3 +1,9 @@
+2007-12-26  Luca Bruno  <lethalman88@gmail.com>
+
+        * st/kernel/Console.st (nextLine): flush stdout
+
+        * syx/syx-primitives.c (FileStream_fileOp): return stdin/stdout/stderr, use fwrite instead of fputs, read instead of fread and fgetc
+
 2007-12-25  Luca Bruno  <lethalman88@gmail.com>
 
         Fix issue #25.
